--- a/src/components/Checkbox/Checkbox.module.css
+++ b/src/components/Checkbox/Checkbox.module.css
@@ -17,6 +17,11 @@
   outline: none;
 }
 
+.checkbox:focus-visible {
+  z-index: 1;
+  box-shadow: 0 0 0 2px #ffffff, 0 0 0 4px #007aff;
+}
+
 .checked {
   color: #007aff; /* Brand Blue */
 }
