--- a/src/app/global.css
+++ b/src/app/global.css
@@ -1,4 +1,8 @@
 :root {
-  --font-sans: 'Inter', system-ui, sans-serif;
-  --font-serif: 'Merriweather', 'Georgia', serif;
+  /* Fonts */
+  --font-sans: "Inter", system-ui, sans-serif;
+  --font-serif: "Merriweather", "Georgia", serif;
+
+  /* Animation */
+  --animation-transition: all 0.2s ease;
 }
