--- a/src/app/global.css
+++ b/src/app/global.css
@@ -4,5 +4,6 @@
   --font-serif: "Merriweather", "Georgia", serif;
 
   /* Animation */
-  --animation-transition: all 0.2s ease;
+  --motion-default: 0.2s ease;
+  --motion-spring: 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
