Add concise recipe carousel

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -152,6 +152,11 @@
   background-color: var(--ui-ControlBackgroundDisabled);
 }
 
+.variantGhost.disabled {
+  border-color: transparent;
+  background-color: transparent;
+}
+
 .loading {
   color: transparent !important;
 }
