--- a/src/components/Sidebar/SidebarItem/SidebarItem.module.css
+++ b/src/components/Sidebar/SidebarItem/SidebarItem.module.css
@@ -6,7 +6,7 @@
   width: 100%;
   min-height: 30px;
   padding: 4px 6px;
-  margin: 0;
+  margin: 0 calc(-1 * var(--sidebar-item-bleed, 0px));
   border-radius: 6px;
   border: none;
   background: transparent;
@@ -16,16 +16,25 @@
   transition:
     background var(--sidebar-motion),
     color var(--sidebar-motion);
-  padding-left: calc(6px + var(--sidebar-item-indent, 0px));
+  padding-left: calc(
+    6px + var(--sidebar-item-indent, 0px) + var(--sidebar-item-bleed, 0px)
+  );
+  padding-right: calc(6px + var(--sidebar-item-bleed, 0px));
 }
 
 .item[data-collapsed="true"] {
-  grid-template-columns: 1fr;
-  justify-items: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  width: 100%;
+  height: 36px;
+  min-height: 36px;
+  padding: 0;
 }
 
 .item:hover {
-  background: var(--ui-ControlHover);
+  background: var(--sidebar-hover, var(--ui-ControlHover));
   color: var(--ui-TextPrimary);
 }
 
@@ -36,11 +45,6 @@
     0 0 0 4px var(--ui-ControlBorderHover);
 }
 
-.itemActive {
-  background: var(--ui-ControlPressed);
-  color: var(--ui-TextPrimary);
-}
-
 .itemIcon {
   display: inline-flex;
   align-items: center;
@@ -48,12 +52,12 @@
   color: var(--ui-TextCaption);
 }
 
-.item:hover .itemIcon {
-  color: var(--ui-TextSecondary);
+.itemIcon svg {
+  display: block;
 }
 
-.itemActive .itemIcon {
-  color: var(--ui-TextPrimary);
+.item:hover .itemIcon {
+  color: var(--ui-TextSecondary);
 }
 
 .itemLabel {
@@ -74,8 +78,4 @@
 
 .item:hover .itemEnd {
   color: var(--ui-TextSecondary);
-}
-
-.itemActive .itemEnd {
-  color: var(--ui-TextPrimary);
 }
