--- a/src/components/Sidebar/SidebarItem/SidebarItem.module.css
+++ b/src/components/Sidebar/SidebarItem/SidebarItem.module.css
@@ -22,43 +22,50 @@
   padding-right: calc(6px + var(--sidebar-item-bleed, 0px));
 }
 
-.item[data-collapsed="true"] {
+.item[data-collapsed="true"],
+.item[data-icon-only="true"] {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0;
-  width: 100%;
-  height: 36px;
-  min-height: 36px;
+  width: var(--sidebar-collapsed-item-size, 44px);
+  height: var(--sidebar-collapsed-item-size, 44px);
+  min-height: var(--sidebar-collapsed-item-size, 44px);
   padding: 0;
+  padding-left: 0;
+  padding-right: 0;
+  margin: 0;
+  border-radius: 8px;
+  gap: 0;
 }
 
 .item:hover {
-  background: var(--sidebar-hover, var(--ui-ControlHover));
+  background: var(--ui-ControlHover);
   color: var(--ui-TextPrimary);
 }
 
+
 .item:focus-visible {
   outline: none;
-  box-shadow:
-    0 0 0 2px var(--ui-Canvas),
-    0 0 0 4px var(--ui-ControlBorderHover);
+  box-shadow: inset 0 0 0 1px var(--ui-ControlBorderHover);
 }
 
 .itemIcon {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  color: var(--ui-TextCaption);
+  color: currentColor;
+}
+
+.item[data-collapsed="true"] .itemIcon,
+.item[data-icon-only="true"] .itemIcon {
+  width: 100%;
+  height: 100%;
 }
 
 .itemIcon svg {
   display: block;
 }
 
-.item:hover .itemIcon {
-  color: var(--ui-TextSecondary);
-}
 
 .itemLabel {
   color: inherit;
@@ -67,6 +74,14 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.itemLabelStacked {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 2px;
+  white-space: normal;
 }
 
 .itemEnd {
