--- a/src/components/Tooltip/Tooltip.module.css
+++ b/src/components/Tooltip/Tooltip.module.css
@@ -14,6 +14,11 @@
   z-index: 20;
 }
 
+.content[data-state="closed"] {
+  opacity: 0;
+  pointer-events: none;
+}
+
 .arrow {
   fill: var(--ui-Canvas);
   /* stroke: none; */
