--- a/src/components/TextEditor/TextEditor.module.css
+++ b/src/components/TextEditor/TextEditor.module.css
@@ -10,6 +10,16 @@
   --editor-gutter: calc(var(--editor-menu-size) + var(--editor-menu-gap));
 }
 
+.editable {
+  --editor-text-padding-left: var(--editor-gutter);
+  --editor-text-padding-right: var(--editor-gutter);
+}
+
+.readOnly {
+  --editor-text-padding-left: 0px;
+  --editor-text-padding-right: 12px;
+}
+
 .input {
   flex-grow: 1;
   width: 100%;
@@ -17,9 +27,9 @@
   outline: none;
   min-width: 0;
   overflow-x: hidden;
-  /* Reserve space for the 24px menu + 8px gap. */
-  padding-left: var(--editor-gutter);
-  padding-right: 12px;
+  /* Reserve space for the menu only when editing. */
+  padding-left: var(--editor-text-padding-left, var(--editor-gutter));
+  padding-right: var(--editor-text-padding-right, 12px);
   padding-top: 12px;
   box-sizing: border-box;
 }
